Testing deployed link with new branch

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,8 @@
 <body>
   <header class="header-grid-container ">
     <div>
-      <h1 id="title">SYNTH MAGIC <img class="synthlogo" src="./assets/synthlogo.jpg" alt="logo"></h1>
+      <h1 id="title">SYNTH MAGIC <img class="synthlogo" src="./assets/synthlogo.jpg" alt="logo of a small synthesizer">
+      </h1>
     </div>
 
     <div class="links-column">
@@ -28,13 +29,14 @@
 
   <section class="synth-main-article-grid-container">
     <div>
-      <img class="img" src="./assets/synth.jpeg" alt="synth">
+      <img class="img" src="./assets/synth.jpeg" alt="image of a synthesizer and website name">
       <!-- The big news content -->
     </div>
 
     <div class="main-article-second-column">
       <!-- MAIN ARTICLE ABOUT NEW PLUG-IN HERE! -->
       <h2> Synth Magic Hits the Market with New Plug-In "Synth Wizard": A Game-Changer for Music Producers</h2>
+      <p>a11y deploy test</p>
       <p>Synth Magic has just launched Sonic Wizard, a powerful new synthesizer plug-in designed for music producers.
         Combining analog warmth with digital precision, it features a hybrid synthesis engine that blends subtractive,
         FM,
@@ -58,7 +60,7 @@
     <div id="article1" class="flex-column">
       <!-- ARTICLE 1 -->
       <h3>Unlocking the Power of Music Synthesizers</h3>
-      <img class="synth2" src="assets/synth2.jpg" alt="synth">
+      <img class="synth2" src="assets/synth2.jpg" alt="image of a synthesizer">
       <p>Music synthesizers are versatile instruments that generate
         sound electronically, allowing musicians to create a vast range of tones. By using oscillators to produce basic
         waveforms—like sine and square waves—synthesizers can mimic real instruments or craft entirely new sounds.
@@ -71,7 +73,7 @@
     <div id="article2" class="flex-column">
       <!-- ARTICLE 2 -->
       <h3>Digital Synth Plugins vs. Analog Synths</h3>
-      <img class="monitors" src="assets/monitors.jpg" alt="monitors">
+      <img class="monitors" src="assets/monitors.jpg" alt="image of music monitors">
       <p>In the evolving world of music production, digital synth plugins are increasingly favored over analog synths.
         Producers are drawn to their cost-effectiveness, offering a vast array of sounds at a fraction of the price.
         Digital synths also provide convenience, with easy integration into digital audio workstations (DAWs) and the
@@ -82,7 +84,7 @@
     <div id="article3" class="flex-column">
       <!-- ARTICLE 3 -->
       <h3>Fitting Synths into Your Mix: Tips for Producers</h3>
-      <img class="soundwave" src="assets/soundwave.jpg" alt="soundwave">
+      <img class="soundwave" src="assets/soundwave.jpg" alt="image of a soundwave">
       <p>Integrating synths into a mix can be challenging, but a few
         key techniques can help. Start by carving out space
         in the frequency spectrum—use EQ to cut frequencies that clash with other instruments. Layering synths with
@@ -94,7 +96,7 @@
     <div id="article4" class="flex-column">
       <!-- ARTICLE 4, ordered list here-->
       <h3>Top 5 Tips to Become the Best Music Producer</h3>
-      <img class="headphones" src="assets/headphones.jpg" alt="headphones">
+      <img class="headphones" src="assets/headphones.jpg" alt="image of headphones">
       <ol class="list">
         <li>Master Your DAW</li>
         <li>Develop Your Ear</li>
