--- a/code/index.html
+++ b/code/index.html
@@ -5,38 +5,45 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Change the title below -->
   <title>News Site</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
+  <!-- Header with site title and navigation links -->
   <header class="header-grid-container ">
     <div>
-      <h1 id="title">SYNTH MAGIC <img class="synthlogo" src="./assets/synthlogo.jpg" alt="logo of a small synthesizer">
+      <h1 id="title">
+        SYNTH MAGIC
+        <img 
+          class="synthlogo" 
+          src="./assets/synthlogo.jpg" 
+          alt="Synth Magic logo featuring a small synthesizer">
       </h1>
     </div>
 
     <div class="links-column">
+      <!-- Navigation Links -->
       <a id="links" href="https://google.com">ABOUT</a>
       <a id="links" href="https://google.com">LOG IN</a>
       <a id="links" href="https://google.com">SIGN UP</a>
       <a id="links" href="https://google.com">CONTACT</a>
     </div>
-    <!-- Some kind of logo and navbar -->
   </header>
-
+     
+  <!-- Main Article Section Start -->
   <section class="synth-main-article-grid-container">
+    <!-- Main image of synthesizer -->
     <div>
-      <img class="img" src="./assets/synth.jpeg" alt="image of a synthesizer and website name">
-      <!-- The big news content -->
+      <img 
+        class="img" 
+        src="./assets/synth.jpeg" 
+        alt="Image of a synthesizer with the text 'Synth Magic' displayed">
     </div>
 
+     <!-- Main article -->
     <div class="main-article-second-column">
-      <!-- MAIN ARTICLE ABOUT NEW PLUG-IN HERE! -->
       <h2> Synth Magic Hits the Market with New Plug-In "Synth Wizard": A Game-Changer for Music Producers</h2>
-      <p>a11y deploy test</p>
       <p>Synth Magic has just launched Sonic Wizard, a powerful new synthesizer plug-in designed for music producers.
         Combining analog warmth with digital precision, it features a hybrid synthesis engine that blends subtractive,
         FM,
@@ -48,6 +55,8 @@
         evolve, Sonic Wizard is set to become a cornerstone in the creation of tomorrow's hits.</p>
       <br>
       <br>
+
+      <!-- Button to download plug-in -->
       <div>
         <a href="https://www.google.com">
           <button class="button" type="button">Download your free trial here</button>
@@ -56,11 +65,16 @@
     </div>
   </section>
 
+  <!-- Articles Section Start -->
   <section class="synth-articles-grid-container">
+
+    <!-- Article 1 -->
     <div id="article1" class="flex-column">
-      <!-- ARTICLE 1 -->
       <h3>Unlocking the Power of Music Synthesizers</h3>
-      <img class="synth2" src="assets/synth2.jpg" alt="image of a synthesizer">
+      <img
+        class="synth2" 
+        src="assets/synth2.jpg" 
+        alt="Close-up of a modern synthesizer">
       <p>Music synthesizers are versatile instruments that generate
         sound electronically, allowing musicians to create a vast range of tones. By using oscillators to produce basic
         waveforms—like sine and square waves—synthesizers can mimic real instruments or craft entirely new sounds.
@@ -70,10 +84,13 @@
         into music.</p>
     </div>
 
+    <!-- Article 2 -->
     <div id="article2" class="flex-column">
-      <!-- ARTICLE 2 -->
       <h3>Digital Synth Plugins vs. Analog Synths</h3>
-      <img class="monitors" src="assets/monitors.jpg" alt="image of music monitors">
+      <img 
+        class="monitors" 
+        src="assets/monitors.jpg" 
+        alt="Studio music monitors">
       <p>In the evolving world of music production, digital synth plugins are increasingly favored over analog synths.
         Producers are drawn to their cost-effectiveness, offering a vast array of sounds at a fraction of the price.
         Digital synths also provide convenience, with easy integration into digital audio workstations (DAWs) and the
@@ -81,10 +98,13 @@
         plugins have made significant strides in emulating these characteristics.</p>
     </div>
 
+    <!-- Article 3 -->
     <div id="article3" class="flex-column">
-      <!-- ARTICLE 3 -->
       <h3>Fitting Synths into Your Mix: Tips for Producers</h3>
-      <img class="soundwave" src="assets/soundwave.jpg" alt="image of a soundwave">
+      <img 
+        class="soundwave" 
+        src="assets/soundwave.jpg" 
+        alt="Graphical representation of a soundwave">
       <p>Integrating synths into a mix can be challenging, but a few
         key techniques can help. Start by carving out space
         in the frequency spectrum—use EQ to cut frequencies that clash with other instruments. Layering synths with
@@ -93,10 +113,13 @@
         elements, ensuring clarity.</p>
     </div>
 
+    <!-- Article 4 - with ordered list -->
     <div id="article4" class="flex-column">
-      <!-- ARTICLE 4, ordered list here-->
       <h3>Top 5 Tips to Become the Best Music Producer</h3>
-      <img class="headphones" src="assets/headphones.jpg" alt="image of headphones">
+      <img 
+        class="headphones" 
+        src="assets/headphones.jpg" 
+        alt="Studio headphones">
       <ol class="list">
         <li>Master Your DAW</li>
         <li>Develop Your Ear</li>
@@ -106,6 +129,8 @@
       </ol>
     </div>
   </section>
+
+  <!-- Footer -->
   <footer>Copyright © 2024 Elina Eriksson Hult</footer>
 </body>
 
