added visually hidden class to the different article links

--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./style.css" />
   <!--favicon image-->
   <link rel="icon" type="image.png" href="assets/cakelogo_favicon.png" />
+  <meta name="News page about baking" content="Baking News and trends with images">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -52,7 +53,7 @@
           versions
           usually include layers of jam or fresh fruit, usually raspberries.</p>
         <a href="https://www.tastingtable.com/1371175/classic-swedish-princess-cake-prinsesstarta-recipe">
-        <button>Read more <span class="visually-hidden">about the Princess cake</span></button></a>
+         <button>Read more<span class="visually-hidden">about the Princess cake</span></button></a> 
       </div>
     </section>
 
@@ -62,7 +63,7 @@
       <article>
         <a
           href="https://liliscakes.com/basics/decorating-cakes-and-desserts/marzipan-almond-paste/making-almond-paste-marzipan-roses-and-leaves/"><img
-            src="assets/rose.jpg" alt="marsipan rose"></a>
+          src="assets/rose.jpg" alt="marsipan rose"><span class="visually-hidden">read more about the marsipan rose</span></a>
         <h3>How to create a marsipan rose</h3>
         <p>Making almond paste roses and leaves is actually pretty easy.
           As usual you just need to practise a little and suddenly one day your roses
@@ -71,14 +72,14 @@
 
       <article>
         <a href="https://businessday.ng/bd-weekender/article/the-most-expensive-cakes-in-the-world/"><img
-            src="assets/expensive_cakes.jpg" alt="expensive cake"></a>
+            src="assets/expensive_cakes.jpg" alt="expensive cake"><span class="visually-hidden">read more about the most expensive cakes</span></a></a>
         <h3>The most expensive cakes in the world</h3>
         <p> While most of us are accustomed to regular bakery cakes, there exists a world where cakes become true works of art, crafted with the finest ingredients and adorned with opulent decorations.</p>
       </article>
 
       <article>
         <a href="https://www.independent.co.uk/indy-eats/janes-patisserie-cookbook-mary-berry-b2592412.html"><img
-            src="assets/baking.jpg" alt="baking"></a>
+            src="assets/baking.jpg" alt="baking"><span class="visually-hidden">read more about the golden rules of baking</span></a>
         <h3>The golden rules of baking</h3>
         <p>Her first book became the fastest-selling baking book of all time, she helped judge the Queen’s Jubilee
           Platinum Pudding alongside Mary Berry and she’s a Saturday Kitchen regular. Now, Jane Dunn is sharing her
@@ -88,7 +89,7 @@
 
       <article>
         <a href="https://www.bakemag.com/articles/19296-robotic-decorating-addresses-bakery-needs"><img
-            src="assets/robot.jpg" alt="robot"></a>
+            src="assets/robot.jpg" alt="robot"><span class="visually-hidden">read more about robotic decorating</span></a>
         <h3>Robotic decorating</h3>
         <p>Decorating cakes, cupcakes, cookies, and pies are labor-intensive tasks. With the drastic reduction of skilled decorators retiring or not entering the industry, robotic decorating offers the perfect answer for bakeries looking to stay competitive.
         </p>
@@ -96,7 +97,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2024 The Sweet Scoop</p>
+    <p>&copy; 2024 The Sweet Scoop Inc</p>
   </footer>
 </body>
 </html>
