Re-sized images again in webp format

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
         SYNTH MAGIC
         <img 
           class="synthlogo" 
-          src="./assets/synthlogo.jpg" 
+          src="./assets/synthlogo.webp" 
           alt="Synth Magic logo featuring a small synthesizer">
       </h1>
     </div>
@@ -37,7 +37,7 @@
     <div>
       <img 
         class="img" 
-        src="./assets/synth.jpeg" 
+        src="./assets/synth.webp" 
         alt="Image of a synthesizer with the text 'Synth Magic' displayed">
     </div>
 
@@ -73,7 +73,7 @@
       <h3>Unlocking the Power of Music Synthesizers</h3>
       <img
         class="synth2" 
-        src="assets/synth2.jpg" 
+        src="assets/synth2.webp" 
         alt="Close-up of a modern synthesizer">
       <p>Music synthesizers are versatile instruments that generate
         sound electronically, allowing musicians to create a vast range of tones. By using oscillators to produce basic
@@ -89,7 +89,7 @@
       <h3>Digital Synth Plugins vs. Analog Synths</h3>
       <img 
         class="monitors" 
-        src="assets/monitors.jpg" 
+        src="assets/monitors.webp" 
         alt="Studio music monitors">
       <p>In the evolving world of music production, digital synth plugins are increasingly favored over analog synths.
         Producers are drawn to their cost-effectiveness, offering a vast array of sounds at a fraction of the price.
@@ -103,7 +103,7 @@
       <h3>Fitting Synths into Your Mix: Tips for Producers</h3>
       <img 
         class="soundwave" 
-        src="assets/soundwave.jpg" 
+        src="assets/soundwave.webp" 
         alt="Graphical representation of a soundwave">
       <p>Integrating synths into a mix can be challenging, but a few
         key techniques can help. Start by carving out space
@@ -118,7 +118,7 @@
       <h3>Top 5 Tips to Become the Best Music Producer</h3>
       <img 
         class="headphones" 
-        src="assets/headphones.jpg" 
+        src="assets/headphones.webp" 
         alt="Studio headphones">
       <ol class="list">
         <li>Master Your DAW</li>
