--- a/code/index.html
+++ b/code/index.html
@@ -62,9 +62,8 @@
       <article>
         <a
           href="https://liliscakes.com/basics/decorating-cakes-and-desserts/marzipan-almond-paste/making-almond-paste-marzipan-roses-and-leaves/">
-          <img src="assets/rose.jpg" alt="marsipan rose"><span class="visually-hidden">read an article about how to
-            create a
-            marsipan rose</span></a>
+          <img src="assets/rose.jpg" alt="marsipan rose"><span class="visually-hidden">click enter to read an article
+            about how to create a marsipan rose</span></a>
         <h3>How to create a marsipan rose</h3>
         <p>Making almond paste roses and leaves is actually pretty easy.
           As usual you just need to practise a little and suddenly one day your roses
@@ -73,8 +72,8 @@
 
       <article>
         <a href="https://businessday.ng/bd-weekender/article/the-most-expensive-cakes-in-the-world/">
-          <img src="assets/expensive_cakes.jpg" alt="expensive cake"><span class="visually-hidden">read an article about
-            the most expensive cakes in the world</span></a></a>
+          <img src="assets/expensive_cakes.jpg" alt="expensive cake"><span class="visually-hidden">click enter to read
+            an article about the most expensive cakes in the world</span></a></a>
         <h3>The most expensive cakes in the world</h3>
         <p> While most of us are accustomed to regular bakery cakes, there exists a world where cakes become true works
           of art, crafted with the finest ingredients and adorned with opulent decorations.</p>
@@ -82,8 +81,8 @@
 
       <article>
         <a href="https://www.independent.co.uk/indy-eats/janes-patisserie-cookbook-mary-berry-b2592412.html"><img
-            src="assets/baking.jpg" alt="baking"><span class="visually-hidden">read an article about the golden rules of
-            baking</span></a>
+            src="assets/baking.jpg" alt="baking"><span class="visually-hidden">click enter to read an article about the
+            golden rules of baking</span></a>
         <h3>The golden rules of baking</h3>
         <p>Her first book became the fastest-selling baking book of all time, she helped judge the Queen’s Jubilee
           Platinum Pudding alongside Mary Berry and she’s a Saturday Kitchen regular. Now, Jane Dunn is sharing her
@@ -93,8 +92,8 @@
 
       <article>
         <a href="https://www.bakemag.com/articles/19296-robotic-decorating-addresses-bakery-needs">
-          <img src="assets/robot.jpg" alt="robot"><span class="visually-hidden">read an article about robotic
-            decorating</span></a>
+          <img src="assets/robot.jpg" alt="robot"><span class="visually-hidden">click enter to read an article about
+            robotic decorating</span></a>
         <h3>Robotic decorating</h3>
         <p>Decorating cakes, cupcakes, cookies, and pies are labor-intensive tasks. With the drastic reduction of
           skilled decorators retiring or not entering the industry, robotic decorating offers the perfect answer for
