Removed lazy loading

--- a/code/index.html
+++ b/code/index.html
@@ -46,8 +46,7 @@
       sizes="
         (max-width: 767px) 100vw, 
         (min-width: 768px) and (max-width: 1023px) 50vw, 
-        (min-width: 1024px) and (max-width: 1600px) 50vw"
-      loading="lazy">
+        (min-width: 1024px) and (max-width: 1600px) 50vw">
     </div>
 
      <!-- Main article -->
